@@ -3,6 +3,7 @@ UNRELEASED (TBA)
 
  - Accept app name *or* API URL in initialize()
  - Denote optional arguments in stubs
+ - Expose stubs' docs and signatures on client, so e.g. tab completion and help within IPython works
 
 
 1.3.1 (2017/07/26)
